--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="./vid.html" class="VID"> LEARN MORE </a>
 
 <br>
-<a href="mailto:someone@example.com" class="MAIL">Send email</a>
+<a href="mailto:therealmoudhi@gmail.com" class="MAIL">Send email</a>
 <br>
     <a href="https://sudoku.com/" target="_blank"> VISIT THE GAME'S WEBSITE </a>
   </body>
