--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
     </ol>
     <br />
     <br />
+    
     <a href="./vid.html" class="VID"> LEARN MORE </a>
 
 <br>
+<button class="MAIL">
 <a href="mailto:therealmoudhi@gmail.com" class="MAIL">Send email</a>
+</button>
 <br>
     <a href="https://sudoku.com/" target="_blank"> VISIT THE GAME'S WEBSITE </a>
   </body>
